--- a/front/vite-project/src/components/Appointment/Appointment.module.css
+++ b/front/vite-project/src/components/Appointment/Appointment.module.css
@@ -29,12 +29,12 @@
 h1{
     color: rgba(57, 17, 69, var(--tw-text-opacity));
     text-decoration: none;
-    font-size: 1.9vw;
+    font-size: 1.7vw;
     font-weight: 600;
     line-height: 1.43;
-    margin-top: 20px;
+    margin: 20px;
     display:flex;
-    justify-content: center;
+    justify-content:flex-start;
 }
 
 .buttonCancel{
