--- a/front/vite-project/src/components/NavBar/Navbar.module.css
+++ b/front/vite-project/src/components/NavBar/Navbar.module.css
@@ -1,29 +1,25 @@
 .navBar {
     display: flex;
     flex-direction: row;
+    margin-top:10px;
 }
 
-a {
+.liNavBar {
     color: rgba(57, 17, 69, var(--tw-text-opacity));
     text-decoration: none;
     font-size: 1.2vw;
     font-weight: 600;
     line-height: 1.43;
-
-}
-
-.liNavBar {
     margin: 8px;
-    text-decoration: none;
+    align-content: center;
+
 }
 
 .navContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: center;
     justify-content: space-between;
-    align-items: center;
     background-color: #fafafa;
     color: rgba(57, 17, 69, var(--tw-text-opacity));
     padding: 10px;
