--- a/front/vite-project/src/views/MyAppointments/MyAppointments.module.css
+++ b/front/vite-project/src/views/MyAppointments/MyAppointments.module.css
@@ -1,9 +1,28 @@
 .containerCards {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     height: 200px;
-    margin: 10px;
+    margin: 20px;
     padding: 10px;
+}
+
+.formContainer{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    margin: 40px;
+}
+
+.containerButton{
+    display:flex;
+    justify-content: end;
+    margin: 10px;
+}
+
+.titleSeccion {
+    margin: 35px;
+    padding:10px;
+
 }
