--- a/front/vite-project/src/components/NavBar/Navbar.module.css
+++ b/front/vite-project/src/components/NavBar/Navbar.module.css
@@ -1,30 +1,22 @@
-.navBar {
-    display: flex;
-    flex-direction: row;
-    margin-top:10px;
-}
-
-.liNavBar {
-    color: rgba(57, 17, 69, var(--tw-text-opacity));
-    text-decoration: none;
-    font-size: 1.2vw;
-    font-weight: 600;
-    line-height: 1.43;
-    margin: 8px;
-    align-content: center;
-
-}
-
 .navContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: #fafafa;
+    background-color: #ffffff;
     color: rgba(57, 17, 69, var(--tw-text-opacity));
     padding: 10px;
+    align-items: center;
+    margin: 0px 10px;
 }
 
 .logo{
     width: 180px;
+}
+
+.button-agendar-turno{
+    display:flex;
+    align-items: center;
+    gap: 4px;
+    font-weight: 500;
 }
