--- a/front/vite-project/src/components/AboutUs/About.module.css
+++ b/front/vite-project/src/components/AboutUs/About.module.css
@@ -1,6 +1,7 @@
 .sectionAbout {
     display:flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .container {
@@ -24,6 +25,7 @@
     color: #646464;
     margin: 12px 0px 0px 20px;
     width: 50vw;
+    font-size:larger;
 }
 
 .buttonContainer {
@@ -31,3 +33,16 @@
     margin-left: 20px;
 }
 
+.containerImage {
+    padding: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.containerImage:hover {
+    -webkit-transform:scale(0.9);
+    transform:scale(0.9);
+    transition-duration: 0.3s;
+    cursor: pointer; 
+}
