--- a/front/vite-project/src/components/Method/Circle.module.css
+++ b/front/vite-project/src/components/Method/Circle.module.css
@@ -9,17 +9,18 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #67DCFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 24px;
     font-weight: 500;
+    color:white;
   }
 
   .circle:hover {
-    background-color: #67DCFF;
+    background-color: #00c3ff;
  color:white;
  transition: 0.5s;
 
