--- a/front/vite-project/src/index.css
+++ b/front/vite-project/src/index.css
@@ -1,7 +1,9 @@
 h3 {
     color: rgb(29, 0, 172);
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 h4 {   
      color: #67DCFF;
+     font-family: "Gill Sans", sans-serif;
 }
